--- a/src/app/main/customer/customer-add/customer-add.component.html
+++ b/src/app/main/customer/customer-add/customer-add.component.html
@@ -111,7 +111,7 @@
                     <div *ngIf="getOrganizationHandler('COORDINATOR').length < 1" class="col-md-1 delete-element"></div>
                 </div>
                 <div *ngIf="getOrganizationHandler('COORDINATOR').length < 1" class="participants--add">
-                    <u class="label text-color" (click)="addOrganizationHandler('COORDINATOR')">{{'btn.add.user.lead' | translate}}</u>
+                    <u class="label text-color" style="color: #106DB6;" (click)="addOrganizationHandler('COORDINATOR')">{{'btn.add.user.lead' | translate}}</u>
                   </div>
             </div>
 
