--- a/src/app/main/customer/customer-detail/customer-detail.component.html
+++ b/src/app/main/customer/customer-detail/customer-detail.component.html
@@ -63,7 +63,7 @@
                       <div class="participants__name" style="width: 6%">
                         <div class="label_detail text-color"><span class="required-title"></span></div>
                         <div class="input-data">
-                          <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale" [disabled]="true">
+                          <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="d.locale" [disabled]="true">
                             <div *ngIf="d.locale =='vi'">
                               <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                 id="dropdownMenu1" ngbDropdownToggle></button>
@@ -160,7 +160,7 @@
       
                             <div class="participants__name" style="width: 17%;margin-left: 5%;">
                               <div class="input-data">
-                                <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale" [disabled]="true">
+                                <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="d.locale" [disabled]="true">
                                   <div *ngIf="d.locale =='vi'">
                                     <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                       id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
@@ -213,7 +213,7 @@
                             <div class="participants__name" style="width: 16%; margin-left: 2%;">
                               <div class="label_detail text-color"><span class="required-title"></span></div>
                               <div class="input-data">
-                                <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale" [disabled]="true">
+                                <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="d.locale" [disabled]="true">
                                   <div *ngIf="d.locale =='vi'">
                                     <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                       id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
@@ -257,7 +257,7 @@
                         <div class="participants__name" style="width: 6%">
                           <div class="label_detail text-color"><span class="required-title"></span></div>
                           <div class="input-data">
-                            <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale" [disabled]="true">
+                            <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="d.locale" [disabled]="true">
                               <div *ngIf="d.locale =='vi'">
                                 <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                   id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
@@ -363,7 +363,7 @@
                             </div>
       
                             <div class="input-data" style="width: 7%;margin-left: 8%;">
-                              <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale" [disabled]="true">
+                              <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="d.locale" [disabled]="true">
                                 <div *ngIf="d.locale =='vi'">
                                   <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                     id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
@@ -420,7 +420,7 @@
                         <div class="participants__name" style="width: 15%; margin-left:5%;">
                           <div class="label_detail text-color"><span class="required-title"></span></div>
                           <div class="input-data">
-                            <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale" [disabled]="true">
+                            <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="d.locale" [disabled]="true">
                               <div *ngIf="d.locale =='vi'">
                                 <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                   id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
@@ -463,7 +463,7 @@
                             <span class="required-title"></span>
                           </div>
                           <div class="input-data">
-                            <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale" [disabled]="true">
+                            <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="d.locale" [disabled]="true">
                               <div *ngIf="d.locale =='vi'">
                                 <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                   id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
@@ -577,7 +577,7 @@
                             <span class="required-title"></span>
                           </div>
                           <div class="input-data">
-                            <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="d.locale" [disabled]="true">
+                            <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="d.locale" [disabled]="true">
                               <div *ngIf="d.locale =='vi'">
                                 <button *ngIf="d.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                   id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
@@ -735,7 +735,7 @@
                               </div>
         
                               <div class="input-data" style="width: 7%;margin-left: 8%;">
-                                <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="this.locale" [disabled]="true">
+                                <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="this.locale" [disabled]="true">
                                   <div *ngIf="this.locale =='vi'">
                                     <button *ngIf="this.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                       id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
@@ -795,7 +795,7 @@
                           <div class="participants__name" style="width: 6%; margin-right: 4%;">
                             <div class="label_detail text-color"><span class="required-title"></span></div>
                             <div class="input-data">
-                              <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="this.locale" [disabled]="true">
+                              <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="this.locale" [disabled]="true">
                                 <div *ngIf="this.locale =='vi'">
                                   <button *ngIf="this.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                     id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
@@ -837,7 +837,7 @@
                           <div class="participants__name" style="width: 6%">
                             <div class="label_detail text-color"><span class="required-title"></span></div>
                             <div class="input-data">
-                              <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="this.locale" [disabled]="true">
+                              <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="this.locale" [disabled]="true">
                                 <div *ngIf="this.locale =='vi'">
                                   <button *ngIf="this.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                     id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
@@ -920,7 +920,7 @@
                           <div class="participants__name" style="width: 6%; margin-left: -18%;">
                             <div class="label_detail text-color"><span class="required-title"></span></div>
                             <div class="input-data">
-                              <div ngbDropdown class="d-inline-block" style="margin-left: 6px;" [(ngModel)]="this.locale" [disabled]="true">
+                              <div ngbDropdown class="d-inline-block" style="margin-left: 6px; pointer-events: none;" [(ngModel)]="this.locale" [disabled]="true">
                                 <div *ngIf="this.locale =='vi'">
                                   <button *ngIf="this.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam"
                                     id="dropdownMenu1" ngbDropdownToggle>{{dropdownButtonText}}</button>
