--- a/src/app/main/customer/customer.component.html
+++ b/src/app/main/customer/customer.component.html
@@ -7,10 +7,10 @@
 <div class="container-fluid">
 
 <div class="col-md-12" style="padding-top: 20px;">
-  <div class="input-line search">
+  <div class="input-line search" style="justify-content:left">
       <img src="../../assets/img/icon_search.svg" class="input-img" />
-      <input type="text" id="filter_name" [value]="filter_name" class="input-text" placeholder="{{'customer.search.name.placeholder' | translate}}" (keyup)="autoSearch($event)" />
-      <img src="../../assets/img/icon_search_group.svg" class="input-img" (click)="searchContract()" />
+      <input type="text" id="filter_name" [value]="filter_name" class="input-text" style="width: 90%!important"
+      placeholder="{{getPlaceholderFind() | translate}}" (keyup)="autoSearch($event)" />
   </div>
 </div>
 <div *ngIf="this.isOrgCustomer" class="row" style="justify-content: flex-end;">
@@ -37,7 +37,7 @@
             <td><a (click)="openDetail(list.id,list.type)" [routerLink]="['/main/form-customer/customer-detail/organization', list.id]"  
               style="color: #0160AE; cursor: pointer; text-decoration: none;">{{list.name}}</a></td>
             <td *ngIf="isOrgCustomer">{{list.taxCode}}</td>
-            <td *ngIf="!isOrgCustomer">{{list.phone}}/{{list.email}}</td>
+            <td *ngIf="!isOrgCustomer">{{getMailOrPhone(list)}}</td>
             <td *ngIf="!isOrgCustomer">{{list.card_id}}</td>
             <td style="text-align: center">
               <img src="../../../assets/img/icon_edit.svg" width="20px" (click)="editCustomer(list.id, this.isOrgCustomer)"  style="cursor: pointer;"/>&nbsp;&nbsp;
