--- a/src/app/main/contract-folder/contract-folder.component.html
+++ b/src/app/main/contract-folder/contract-folder.component.html
@@ -18,7 +18,7 @@
       </ul>
     </div>
     <div class="col-md-6 btn-container">
-      <button class="btn btn-lg btn-block btn_submit">Thêm thư mục</button>
+      <button class="btn btn-lg btn-block btn_submit" (click)="addFolder()">Thêm thư mục</button>
     </div>
   </div>
   <div class="row" style="padding-top: 20px;">
