--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
@@ -584,14 +584,14 @@ input[type=number] {
   color: grey;
 }
 
-.btn {
-  margin-left: 10px;
-  background-color: #1487E1;
-  border-radius: 10px;
-  color: white;
-  height: 33px;
-  font-size: 13px;
-}
+// .btn {
+//   margin-left: 10px;
+//   background-color: #1487E1;
+//   border-radius: 10px;
+//   color: white;
+//   height: 33px;
+//   font-size: 13px;
+// }
 
 .none-button {
   width: 82.45px; 
