update người trong luồng xử lý 1 lần

--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -48,8 +48,8 @@
                             <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="{{'resend.sms.email' | translate}}" (click)="resendSmsEmail(d.id)"/>
                         </div>
 
-                        <!-- <div *ngIf = "d.statusNumber !== 2 && d.statusNumber !== 4 && (d.change_num === 0 || !d.change_num)" class="div_icon"> -->
-                        <div *ngIf = "d.statusNumber !== 2 && d.statusNumber !== 4" class="div_icon">
+                        <div *ngIf = "d.statusNumber !== 2 && d.statusNumber !== 4 && (d.change_num === 0 || !d.change_num)" class="div_icon"> -->
+                        <!-- <div *ngIf = "d.statusNumber !== 2 && d.statusNumber !== 4" class="div_icon"> -->
                              <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'update_person_process' | translate}}" (click)="openEdit(d.id)"/>
                         </div>
                 </div>
