an phan cau hinh ngay sap het han

--- a/src/app/main/config-sms-email/config-sms-email.component.html
+++ b/src/app/main/config-sms-email/config-sms-email.component.html
@@ -46,7 +46,8 @@
         </div>
     </div>
 
-    <div *ngIf="isRoleConfigExpirationDay">
+    <!--Lệnh if để ẩn-->
+    <div *ngIf="isRoleConfigExpirationDay && !isRoleConfigExpirationDay">
         <div class="sms-header">
             {{'config.day.expiration' | translate}}
         </div>
