fix o tien + fix css danh muc khach hang

--- a/src/app/main/contract-folder/current-folder/current-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/current-folder.component.html
@@ -32,10 +32,10 @@
                                 </a>
                             </div>
 
-                            <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
+                            <!-- <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
                                 <div class="item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}
                                 </div>
-                            </div>
+                            </div> -->
 
                         </div>
                     </div>
