--- a/src/app/main/contract-folder/contract-folder.component.scss
+++ b/src/app/main/contract-folder/contract-folder.component.scss
@@ -78,7 +78,7 @@
     padding: 8px;
   }
   
-  #table tr:nth-child(even){background-color: #f2f2f2;}
+  // #table tr:nth-child(even){background-color: #f2f2f2;}
   
   #table tr:hover {background-color: #ddd;}
   
