--- a/src/app/main/customer/customer.component.html
+++ b/src/app/main/customer/customer.component.html
@@ -64,4 +64,6 @@ style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: cente
   </div>
 </div>
 </div>
-<ngx-spinner></ngx-spinner>
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
+  <p style="font-size: 18px; color: white">{{'sys.processing' | translate}}...</p>
+</ngx-spinner>
