danh muc khach hang fix 30/5

--- a/src/app/main/contract/dialog/add-partner-dialog/add-partner-dialog.component.html
+++ b/src/app/main/contract/dialog/add-partner-dialog/add-partner-dialog.component.html
@@ -28,7 +28,8 @@
                     <td><a  
                       style="color: #0160AE; cursor: pointer; text-decoration: none;">{{list.name}}</a></td>
                     <td *ngIf="type == 'ORGANIZATION'">{{list.taxCode}}</td>
-                    <td *ngIf="type == 'PERSONAL'">{{getMailOrPhone(list)}}</td>
+                    <td *ngIf="type == 'PERSONAL'">{{list.phone}}</td>
+                    <td *ngIf="type=='PERSONAL'">{{list.email}}</td>
                     <td *ngIf="type == 'PERSONAL'">{{list.card_id}}</td>
                   </tr>
               </ng-template>
